# sentinel-pro

./: .gitignore  CHANGELOG.md  CHANGELOG_EN.md  Cargo.toml  ESTRUCTURA.md  METRICS_SYSTEM.md  MIGRATION.md  PENDING_TASKS.md  README.md  STRUCTURE.md  errors.txt  install.ps1  install.sh  package-lock.json  package.json
.github/workflows/: release.yml
.sentinel/profiles/: django.yaml  laravel.yaml  nestjs.yaml  spring.yaml
docs/: 2025-02-17-sentinel-pro-cli-design.md  2025-02-17-sentinel-pro-implementation-plan.md  ai-providers.md  architecture.md  commands.md  configuration.md  examples.md  github-actions-example.yml  installation.md  roadmap.md  security.md  testing-detection-examples.md  troubleshooting.md  workflows.md
docs/plans/: 2025-02-17-phase1-fundamentos-pro.md  2026-02-20-ai-provider-refactor-design.md  2026-02-20-ai-provider-refactor.md  2026-02-23-autoindex-dedup-design.md  2026-02-23-autoindex-dedup.md  2026-02-23-check-audit-precision-design.md  2026-02-23-check-audit-precision.md  2026-02-23-reliability-testing-design.md  2026-02-23-reliability-testing.md  2026-02-23-sentinel-depth-design.md  2026-02-23-sentinel-depth.md  2026-02-23-sentinel-power-design.md  2026-02-23-sentinel-power.md  2026-02-23-sentinel-precision-gaps-design.md  2026-02-23-sentinel-precision-gaps.md  2026-02-23-sentinel-scale-design.md  2026-02-23-sentinel-scale.md  2026-02-24-reliability-dx.md  2026-02-24-sentinel-roadmap-design.md  Masterplan.md  Plan-v2.md  phase8-monetization.md  socials.md
scripts/: test-real-project.sh
src/: business_logic_guard.rs  config.rs  docs.rs  files.rs  git.rs  main.rs  stats.rs  tests.rs  ui.rs
src/agents/: base.rs  coder.rs  fix_suggester.rs  mod.rs  orchestrator.rs  refactor.rs  reviewer.rs  splitter.rs  tester.rs  workflow.rs
src/ai/: analysis.rs  cache.rs  client.rs  framework.rs  mod.rs  testing.rs  utils.rs
src/ai/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai_compat.rs
src/commands/: doctor.rs  ignore.rs  index.rs  init.rs  mod.rs  monitor.rs  pro.rs  rules.rs
src/commands/pro/: audit.rs  check.rs  mod.rs  render.rs  review.rs
src/index/: builder.rs  call_graph.rs  db.rs  import_index.rs  mod.rs  quality_history.rs  symbol_table.rs
src/kb/: context.rs  indexer.rs  manager.rs  mod.rs  vector_db.rs
src/ml/: embeddings.rs  mod.rs  predictor.rs
src/ml/patterns/: mod.rs  style.rs
src/rules/: engine.rs  mod.rs  static_analysis.rs
src/rules/languages/: go.rs  mod.rs  python.rs  typescript.rs
website/: docusaurus.config.ts  package-lock.json
website/docs/: intro.md
