[package]
name = "sentinel-rust"
version = "5.0.0-pro.beta.1"
edition = "2024"

[[bin]]
name = "sentinel-pro"
path = "src/main.rs"

[dependencies]
notify = "6.1.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5.59", features = ["derive"] }
indicatif = "0.18.4"
dialoguer = "0.11"
serde_yaml = "0.9.34"
tree-sitter = "0.26.5"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
qdrant-client = "1.10.1"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
async-trait = "0.1.89"

# Machine Learning Local (Pinned for compatibility)
candle-core = "0.3.3"
candle-nn = "0.3.3"
candle-transformers = "0.3.3"
tokenizers = "0.15.0"
hf-hub = "0.3.2"

# Dependency Alignment
rand = "0.8.5"
rand_distr = "0.4.3"
half = { version = "=2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
ignore = "0.4.25"

[dev-dependencies]
tempfile = "3.10"
